test/error/ptr_assign_global.gw
class C { typedef void (test)(); }
function void test(){}
C c;
test @=> c.test;
